--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -27,8 +27,23 @@
 	<section ng-cloak>
 
 		<!-- sticky header -->
-		<md-subheader layout-align="center center" class="header" layout="row" layout-align=" center" layout flex>
-			<md-button style="color: {{base_hue_darkest.value}}" ng-repeat="nav in navigation">{{nav.name}}</md-button>
+		<md-subheader layout-align="center center" class="header" layout="row" layout flex>
+
+			<div flex-gt-sm="33"></div>
+
+			<div flex-gt-sm="33" layout-align="center center" layout="row">
+				<img src="media/logo.png">
+			</div>
+
+			<div flex-gt-sm="33">
+				<md-button class="md-icon-button" aria-label="Login" ng-click="showLoginDialog($event)">
+					<md-icon style="color: #BDBDBD">face</md-icon>
+				</md-button>
+				<md-button class="md-icon-button" aria-label="More">
+					<md-icon style="color: #BDBDBD">menu</md-icon>
+				</md-button>
+			</div>
+			
 		</md-subheader>
 		<!-- sticky header -->
 
