--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -27,21 +27,24 @@
 	<section ng-cloak>
 
 		<!-- sticky header -->
-		<md-subheader layout-align="center center" class="header" layout="row" layout flex>
+		<md-subheader layout-align="center center" layout="row" layout flex>
 
-			<div flex-gt-sm="33"></div>
+			<div layout-align="center center" class="header" layout="row" layout flex>
 
-			<div flex-gt-sm="33" layout-align="center center" layout="row">
-				<img src="media/logo.png">
-			</div>
+				<div flex-gt-sm="33"></div>
 
-			<div flex-gt-sm="33">
-				<md-button class="md-icon-button" aria-label="Login" ng-click="showLoginDialog($event)">
-					<md-icon style="color: #BDBDBD">face</md-icon>
-				</md-button>
-				<md-button class="md-icon-button" aria-label="More">
-					<md-icon style="color: #BDBDBD">menu</md-icon>
-				</md-button>
+				<div flex-gt-sm="33" layout-align="center center" layout="row">
+					<img src="media/logo.png">
+				</div>
+
+				<div flex-gt-sm="33">
+					<md-button class="md-icon-button" aria-label="Login" ng-click="showLoginDialog($event)">
+						<md-icon style="color: #BDBDBD">face</md-icon>
+					</md-button>
+					<md-button class="md-icon-button" aria-label="More">
+						<md-icon style="color: #BDBDBD">menu</md-icon>
+					</md-button>
+				</div>
 			</div>
 			
 		</md-subheader>
