more header adjustments

--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -34,10 +34,10 @@
 				<div flex-gt-sm="33"></div>
 
 				<div flex-gt-sm="33" layout-align="center center" layout="row">
-					<img src="media/logo.png">
+					<img src="media/logo.png" style="max-height: 125px;">
 				</div>
 
-				<div flex-gt-sm="33">
+				<div flex-gt-sm="33" layout-align="center end" layout="row">
 					<md-button class="md-icon-button" aria-label="Login" ng-click="showLoginDialog($event)">
 						<md-icon style="color: #BDBDBD">face</md-icon>
 					</md-button>
