more header adjustments

--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -27,7 +27,7 @@
 	<section ng-cloak>
 
 		<!-- sticky header -->
-		<md-subheader layout-align="center center" layout="row" layout flex>
+		<md-subheader class="md-whiteframe-1dp" layout-align="center center" layout="row" layout flex>
 
 			<div layout-align="center center" class="header" layout="row" layout flex>
 
