--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -27,17 +27,17 @@
 	<section ng-cloak>
 
 		<!-- sticky header -->
-		<md-subheader class="md-whiteframe-1dp" layout-align="center center" layout="row" layout flex>
+		<md-subheader class="md-whiteframe-1dp header" layout-align="center center" layout="row" layout flex>
 
-			<div layout-align="center center" class="header" layout="row" layout flex>
+			<div layout-align="center center" layout="row" layout flex>
 
 				<div flex-gt-sm="33"></div>
 
 				<div flex-gt-sm="33" layout-align="center center" layout="row">
-					<img src="media/logo.png" style="max-height: 125px;">
+					<img src="media/logo.png" style="max-height: 64px;">
 				</div>
 
-				<div flex-gt-sm="33" layout-align="center end" layout="row">
+				<div flex-gt-sm="33" layout-align="end center" layout="row">
 					<md-button class="md-icon-button" aria-label="Login" ng-click="showLoginDialog($event)">
 						<md-icon style="color: #BDBDBD">face</md-icon>
 					</md-button>
