--- a/lib/client/app/stylesheets/header.css
+++ b/lib/client/app/stylesheets/header.css
@@ -5,5 +5,5 @@
 	-webkit-transition: margin 2s; /* Safari */
     transition: margin 2s;
 }
-.md-subheader-inner {transition: all .5s ease-in-out;}
+.md-subheader-inner {width: 100%;}
 .nav.slide-nav .md-subheader-inner {margin-left: -35%;}
