--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -34,15 +34,15 @@
 				<div flex-gt-sm="33"></div>
 
 				<div flex-gt-sm="33" layout-align="center center" layout="row">
-					<img src="media/logo.png" style="max-height: 64px;">
+					<img src="media/logo.png" style="max-height: 48px;">
 				</div>
 
 				<div flex-gt-sm="33" layout-align="end center" layout="row">
 					<md-button class="md-icon-button" aria-label="Login" ng-click="showLoginDialog($event)">
-						<md-icon style="color: #BDBDBD">face</md-icon>
+						<md-icon style="color: {{base_hue_darkest.value}}">face</md-icon>
 					</md-button>
 					<md-button class="md-icon-button" aria-label="More">
-						<md-icon style="color: #BDBDBD">menu</md-icon>
+						<md-icon style="color: {{base_hue_darkest.value}}">menu</md-icon>
 					</md-button>
 				</div>
 			</div>
