--- a/lib/client/app/application/landing/partials/slideshow.html
+++ b/lib/client/app/application/landing/partials/slideshow.html
@@ -2,10 +2,14 @@
 <div class="lightweight-hero--slideshow mdl-grid component slideshow dead-center-container" hero-element style="position: relative;">
 	<span id="top" hash="top" style="position: absolute; top:-100px; left: 0; height: 1px; width: 1px;"></span>
 
-	<div class="slide--display" slideshow-container ng-repeat="slide in slideshow.data[0].content.lists[0].content">
-		<img class="slideshow_slide_image" alt="{{slide.alt}}" ng-src="{{slide.source}}" ng-show="$index == visible_slide && slide.type == 'image'" style="display: block; margin: 0 auto;">
+	<div class="slide--display" slideshow-container>
+		<!-- <img class="slideshow_slide_image" alt="{{slide.alt}}" ng-src="{{slide.source}}" ng-show="$index == visible_slide && slide.type == 'image'" style="display: block; margin: 0 auto;"> -->
+		<video class="slideshow_slide_image" style="display: block; margin: 0 auto;">
+  			<source src="media/mma-hero-video.mp4" type="video/mp4">
+			Your browser does not support the video tag.
+		</video>
         <div class="slideshow-content">
-            <div class="dead-center-content" ng-class="{'show-content': $index == visible_slide}" ng-show="$index == visible_slide" style="position: absolute; width: 600px; height: 300px; background-color: rgba(255,255,255, 0.9);" dead-center>
+            <div class="dead-center-content" ng-class="{'show-content': $index == visible_slide}" style="position: absolute; width: 600px; height: 300px; background-color: rgba(255,255,255, 0.9);" dead-center>
                 <div layout="row" layout-align="center start">
                     <h1>Content</h1>
                 </div>
