--- a/lib/client/app/application/landing/partials/slideshow.html
+++ b/lib/client/app/application/landing/partials/slideshow.html
@@ -4,7 +4,8 @@
 
 	<div class="slide--display" slideshow-container>
 		<!-- <img class="slideshow_slide_image" alt="{{slide.alt}}" ng-src="{{slide.source}}" ng-show="$index == visible_slide && slide.type == 'image'" style="display: block; margin: 0 auto;"> -->
-		<video class="slideshow_slide_image" style="display: block; margin: 0 auto;" autoplay>
+		<div class="video-overlay"></div>
+		<video class="slideshow_slide_image" style="display: block; margin: 0 auto;" autoplay loop>
   			<source src="media/mma-hero-video.mp4" type="video/mp4">
 			Your browser does not support the video tag.
 		</video>
