--- a/lib/client/app/stylesheets/slideshow.css
+++ b/lib/client/app/stylesheets/slideshow.css
@@ -7,6 +7,11 @@
 .slideshow--slide-container {position: absolute; height: 100%; left: 0; box-sizing: border-box; margin: 0!important; padding: 0!important; overflow: hidden; transition: all .5s ease-in-out;}
 .slide--display {position: absolute; top: 0; height: 100%!important; margin: 0!important; box-sizing: border-box; padding: 0!important; left: 0; top: 0;}
 .slide-hide-override {display: none!important;}
+.video-overlay {
+  position: absolute; top: 0; left: 0; width: 100%; height: 64px; z-index: 2;
+  background: linear-gradient(90deg, #757575 20px, transparent 1%) center, linear-gradient(#F5F5F5 20px, transparent 1%) center, #9192FB;
+  background-size: 22px 22px;
+}
 #slideshow-overlay {
     background: -webkit-linear-gradient(rgba(66,66,66, 0.7), transparent); /* For Safari 5.1 to 6.0 */
     background: -o-linear-gradient(rgba(66,66,66, 0.7), transparent); /* For Opera 11.1 to 12.0 */
