--- a/lib/client/app/stylesheets/slideshow.css
+++ b/lib/client/app/stylesheets/slideshow.css
@@ -8,9 +8,11 @@
 .slide--display {position: absolute; top: 0; height: 100%!important; margin: 0!important; box-sizing: border-box; padding: 0!important; left: 0; top: 0;}
 .slide-hide-override {display: none!important;}
 .video-overlay {
-  position: absolute; top: 0; left: 0; width: 100%; height: 64px; z-index: 2;
-  background: linear-gradient(90deg, transparent 20px, transparent 1%) center, linear-gradient(transparent 20px, transparent 1%) center, #e0e0e0;
-  background-size: 22px 22px;
+  position: absolute; top: 0; left: 0; width: 100%; height: 100%;
+  opacity: 0.3;
+  bottom: 0;
+  background-image: url(https://cdnjs.cloudflare.com/ajax/libs/vegas/2.3.1/overlays/03.png);
+  z-index: 1;
 }
 #slideshow-overlay {
     background: -webkit-linear-gradient(rgba(66,66,66, 0.7), transparent); /* For Safari 5.1 to 6.0 */
