--- a/lib/client/app/application/landing/partials/slideshow.html
+++ b/lib/client/app/application/landing/partials/slideshow.html
@@ -1,29 +1,21 @@
 <!-- Hero Slideshow -->
-<div class="lightweight-hero--slideshow mdl-grid component slideshow dead-center-container" hero-element style="position: relative;">
+<div class="lightweight-hero--slideshow mdl-grid component slideshow" hero-element style="position: relative;">
 	<span id="top" hash="top" style="position: absolute; top:-100px; left: 0; height: 1px; width: 1px;"></span>
 
 	<div class="slide--display" slideshow-container>
-		<!-- <img class="slideshow_slide_image" alt="{{slide.alt}}" ng-src="{{slide.source}}" ng-show="$index == visible_slide && slide.type == 'image'" style="display: block; margin: 0 auto;"> -->
 		<div class="video-overlay"></div>
 		<video class="slideshow_slide_image" style="display: block; margin: 0 auto;" autoplay loop>
   			<source src="media/mma-hero-video.mp4" type="video/mp4">
 			Your browser does not support the video tag.
 		</video>
         <div class="slideshow-content">
-            <div class="dead-center-content" ng-class="{'show-content': $index == visible_slide}" style="position: absolute; width: 600px; height: 300px; background-color: rgba(255,255,255, 0.9);" dead-center>
-                <div layout="row" layout-align="center start">
-                    <h1>Content</h1>
+            <div layout="row" layout-align="start center">
+                <div layout="row" layout-align="start center">
+                    <h1>Cutting Edge Civil Engineering Firm</h1>
+                    <p>Helping Reshape North Texas!</p>
                 </div>
             </div>
         </div>
-
-		<!-- <div class="slideshow-title" ng-class="{'show-text': $index == visible_slide}" ng-show="$index == visible_slide">
-		    <p class="mdl-color-text--grey-300 mdl-typography--font-bold">{{slide.name}}</p>
-		</div>
-
-		<div class="slideshow-description" ng-class="{'show-text': $index == visible_slide}" ng-show="$index == visible_slide">
-		    <p class="mdl-color-text--grey-300 mdl-typography--font-bold">{{slide.location}}</p>
-		</div> -->
 	</div>
 </div>
 <!-- Hero Slideshow -->
