--- a/lib/client/app/application/landing/partials/slideshow.html
+++ b/lib/client/app/application/landing/partials/slideshow.html
@@ -10,9 +10,9 @@
 		</video>
         <div class="slideshow-content">
             <div layout="row" layout-align="start center">
-                <div layout="row" layout-align="start center">
-                    <h1>Cutting Edge Civil Engineering Firm</h1>
-                    <p>Helping Reshape North Texas!</p>
+                <div layout="column" layout-align="center start">
+                    <h1 style="color: {{base_hue_lightest.value}}; font-size: 36px">Cutting Edge Civil Engineering Firm</h1>
+                    <p style="color: {{base_hue_lightest.value}}">Helping Reshape North Texas!</p>
                 </div>
             </div>
         </div>
