--- a/lib/client/app/application/landing/partials/slideshow.html
+++ b/lib/client/app/application/landing/partials/slideshow.html
@@ -8,9 +8,9 @@
   			<source src="media/mma-hero-video.mp4" type="video/mp4">
 			Your browser does not support the video tag.
 		</video>
-        <div class="slideshow-content">
-            <div layout="row" layout-align="start center">
-                <div layout="column" layout-align="center start">
+        <div class="slideshow-content" style="margin-top: 100px; z-index: 2;">
+            <div layout="row" layout-margin layout-align="start center">
+                <div layout="column" layout-align="center start" style="max-width: 400px;">
                     <h1 style="color: {{base_hue_lightest.value}}; font-size: 36px">Cutting Edge Civil Engineering Firm</h1>
                     <p style="color: {{base_hue_lightest.value}}">Helping Reshape North Texas!</p>
                 </div>
