--- a/lib/client/app/application/landing/partials/slideshow.html
+++ b/lib/client/app/application/landing/partials/slideshow.html
@@ -8,15 +8,17 @@
   			<source src="media/mma-hero-video.mp4" type="video/mp4">
 			Your browser does not support the video tag.
 		</video>
-        <div class="slideshow-content" style="margin-top: 100px; margin-left: 100px; z-index: 2; position: relative;">
-        	<div class="left-bar bar" style="position: absolute; top: 0; left:0; height: 80%; width: 4px;">
-            <div layout="row" layout-margin layout-align="start center">
-                <div layout="column" layout-align="center start" style="max-width: 600px;">
-                    <h1 style="color: {{base_hue_lightest.value}}; font-size: 56px;">Cutting Edge Civil Engineering Firm</h1>
-                    <p style="color: {{base_hue_lightest.value}}; font-size: 16px;">Helping Reshape North Texas!</p>
-                </div>
+        <div class="slideshow-content" style="margin-top: 100px; margin-left: 100px; z-index: 2;">
+        	<div style="position: relative;">
+	        	<div class="left-bar bar" style="position: absolute; top: 0; left:0; height: 80%; width: 4px;">
+	            <div layout="row" layout-margin layout-align="start center">
+	                <div layout="column" layout-align="center start" style="max-width: 600px;">
+	                    <h1 style="color: {{base_hue_lightest.value}}; font-size: 56px;">Cutting Edge Civil Engineering Firm</h1>
+	                    <p style="color: {{base_hue_lightest.value}}; font-size: 16px;">Helping Reshape North Texas!</p>
+	                </div>
+	            </div>
+	            <div class="right-bar bar" style="position: absolute; top: 20%; right: 0; height: 80%; width: 4px;">
             </div>
-            <div class="right-bar bar" style="position: absolute; top: 20%; right: 0; height: 80%; width: 4px;">
         </div>
 	</div>
 </div>
