--- a/lib/client/app/application/landing/partials/slideshow.html
+++ b/lib/client/app/application/landing/partials/slideshow.html
@@ -10,14 +10,14 @@
 		</video>
         <div class="slideshow-content" style="margin-top: 100px; margin-left: 100px; z-index: 2;">
         	<div style="position: relative;">
-	        	<div class="left-bar bar" style="position: absolute; top: 0; left:0; height: 80%; width: 4px;">
+	        	<div class="left-bar bar" style="position: absolute; top: 0; left:0; height: 80%; width: 4px;"></div>
 	            <div layout="row" layout-margin layout-align="start center">
 	                <div layout="column" layout-align="center start" style="max-width: 600px;">
 	                    <h1 style="color: {{base_hue_lightest.value}}; font-size: 56px;">Cutting Edge Civil Engineering Firm</h1>
 	                    <p style="color: {{base_hue_lightest.value}}; font-size: 16px;">Helping Reshape North Texas!</p>
 	                </div>
 	            </div>
-	            <div class="right-bar bar" style="position: absolute; top: 20%; right: 0; height: 80%; width: 4px;">
+	            <div class="right-bar bar" style="position: absolute; top: 20%; right: 0; height: 80%; width: 4px;"></div>
             </div>
         </div>
 	</div>
