--- a/lib/client/app/application/landing/partials/slideshow.html
+++ b/lib/client/app/application/landing/partials/slideshow.html
@@ -8,12 +8,12 @@
   			<source src="media/mma-hero-video.mp4" type="video/mp4">
 			Your browser does not support the video tag.
 		</video>
-        <div class="slideshow-content" style="margin-top: 100px; margin-left: 100px; z-index: 1;" flex>
-        	<div style="position: relative; max-width: 500px;">
+        <div class="slideshow-content" style="margin-top: 200px; margin-left: 100px; z-index: 1;" flex>
+        	<div style="position: relative; max-width: 416px; height: 400px;">
 	        	<div class="left-bar bar" style="position: absolute; top: 0; left:0; height: 80%; width: 4px;"></div>
 	            <div layout="row" layout-margin layout-align="start center">
 	                <div layout="column" layout-align="center start" style="max-width: 600px;">
-	                    <h1 style="color: {{base_hue_lightest.value}}; font-size: 56px;">Cutting Edge Civil Engineering Firm</h1>
+	                    <h1 style="color: {{base_hue_lightest.value}}; font-size: 56px; line-height: 64px;">Cutting Edge Civil Engineering Firm</h1>
 	                    <p style="color: {{base_hue_lightest.value}}; font-size: 16px;">Helping Reshape North Texas!</p>
 	                </div>
 	            </div>
