--- a/lib/client/app/application/landing/partials/slideshow.html
+++ b/lib/client/app/application/landing/partials/slideshow.html
@@ -12,8 +12,8 @@
         	<div style="position: relative; max-width: 440px; height: 400px;" layout="row" layout-align="center center" flex>
 	        	<div class="left-bar bar" style="position: absolute; top: 0; left:0; height: 80%; width: 4px;"></div>
 	            <div layout="row" layout-margin layout-align="start center">
-	                <div layout="column" layout-align="center start" style="max-width: 600px;">
-	                    <h1 style="color: {{base_hue_lightest.value}}; font-size: 56px; line-height: 64px;">Cutting Edge Civil Engineering Firm</h1>
+	                <div layout="column" layout-align="center start">
+	                    <h1 style="color: {{base_hue_lightest.value}}; font-size: 56px; line-height: 64px; margin: 0;">Cutting Edge Civil Engineering Firm</h1>
 	                    <p style="color: {{base_hue_lightest.value}}; font-size: 16px;">Helping Reshape North Texas!</p>
 	                </div>
 	            </div>
