--- a/lib/client/app/stylesheets/slideshow.css
+++ b/lib/client/app/stylesheets/slideshow.css
@@ -9,9 +9,10 @@
 .slide-hide-override {display: none!important;}
 .video-overlay {
   position: absolute; top: 0; left: 0; width: 100%; height: 100%;
-  opacity: 0.2;
+  opacity: 0.7;
   bottom: 0;
-  background-image: url(https://cdnjs.cloudflare.com/ajax/libs/vegas/2.3.1/overlays/03.png);
+  background-color: #fafafa;
+  /*background-image: url(https://cdnjs.cloudflare.com/ajax/libs/vegas/2.3.1/overlays/03.png);*/
   z-index: 1;
 }
 #slideshow-overlay {
