--- a/lib/client/app/stylesheets/slideshow.css
+++ b/lib/client/app/stylesheets/slideshow.css
@@ -22,7 +22,7 @@
     background: linear-gradient(rgba(66,66,66, 0.7), transparent); /* Standard syntax */
     position: absolute; top: 0; left: 0; width: 100%; height: 64px; z-index: 2;
 }
-.slideshow-content {position: absolute; left: 0; top: 0;}
+/*.slideshow-content {position: absolute; left: 0; top: 0;}*/
 .show-content {
 	position: absolute;
 	opacity: 0;
