--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -29,7 +29,7 @@
 
 
 		<!-- Slideshow -->
-		<div ng-include src="'application/landing/partials/slideshow.html'"></div>
+		<div ng-include style="margin-top: -80px;" src="'application/landing/partials/slideshow.html'"></div>
 		<!-- Slideshow -->
 		
 		<div layout="row" layout-align="center center" class="md-accent normal-container">
