--- a/lib/client/app/application/landing/partials/slideshow.html
+++ b/lib/client/app/application/landing/partials/slideshow.html
@@ -1,7 +1,7 @@
 <!-- Hero Slideshow -->
-<div class="lightweight-hero--slideshow mdl-grid component slideshow dead-center-container" hero-element style="position: relative;">
+<div class="lightweight-hero--slideshow mdl-grid component slideshow" hero-element style="position: relative;">
 	<span id="top" hash="top" style="position: absolute; top:-100px; left: 0; height: 1px; width: 1px;"></span>
-	<div class="slide--display" slideshow-container flex>
+	<div class="slide--display dead-center-container" slideshow-container flex>
 		<div class="video-overlay"></div>
 		<video class="slideshow_slide_image" style="display: block; margin: 0 auto;" autoplay loop>
   			<source src="media/mma-hero-video.mp4" type="video/mp4">
