--- a/lib/client/app/application/landing/partials/slideshow.html
+++ b/lib/client/app/application/landing/partials/slideshow.html
@@ -1,13 +1,14 @@
 <!-- Hero Slideshow -->
 <div class="lightweight-hero--slideshow mdl-grid component slideshow" hero-element style="position: relative;">
 	<span id="top" hash="top" style="position: absolute; top:-100px; left: 0; height: 1px; width: 1px;"></span>
-	<div class="slide--display dead-center-container" slideshow-container flex>
+
+	<div class="slide--display" slideshow-container layout="row" layout-align="center center" flex>
 		<div class="video-overlay"></div>
 		<video class="slideshow_slide_image" style="display: block; margin: 0 auto;" autoplay loop>
   			<source src="media/mma-hero-video.mp4" type="video/mp4">
 			Your browser does not support the video tag.
 		</video>
-        <div class="slideshow-content dead-center-content" dead-center style="z-index: 1;" flex>
+        <div class="slideshow-content" style="z-index: 1;" flex>
         	<div style="position: relative; max-width: 468px; height: 400px;" layout="row" layout-align="center center" flex>
 	        	<div class="left-bar bar" style="position: absolute; top: 0; left:0; height: 80%; width: 4px;"></div>
 	            <div layout="row" layout-margin layout-align="start center">
