--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -16,10 +16,10 @@
 
 				<div flex-gt-sm="33" layout-align="end center" layout="row">
 					<md-button style="background-color: {{primary_hue_normal.value}};" class="md-fab md-mini" aria-label="Login" ng-click="showLoginDialog($event)">
-						<md-icon style="color: {{base_hue_darkest.value}}">face</md-icon>
+						<md-icon style="color: {{base_hue_lightest.value}}">face</md-icon>
 					</md-button>
 					<md-button style="background-color: {{primary_hue_normal.value}};" class="md-fab md-mini" aria-label="More">
-						<md-icon style="color: {{base_hue_darkest.value}}">menu</md-icon>
+						<md-icon style="color: {{base_hue_lightest.value}}">menu</md-icon>
 					</md-button>
 				</div>
 			</div>
@@ -27,7 +27,7 @@
 		</md-subheader>
 		<!-- sticky header -->
 
-		<md-button style="background-color: {{primary_hue_normal.value}}; position: absolute; right: 24px; bottom: 48px;" class="md-fab" aria-label="More">
+		<md-button style="background-color: {{primary_hue_normal.value}}; position: fixed; right: 24px; bottom: 48px;" class="md-fab" aria-label="More">
 			<md-icon style="color: {{base_hue_lightest.value}}">mail</md-icon>
 		</md-button>
 
