--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -15,10 +15,10 @@
 				</div>
 
 				<div flex-gt-sm="33" layout-align="end center" layout="row">
-					<md-button style="background-color: {{primary_hue_normal.value}};" class="md-fab md-mini" aria-label="Login" ng-click="showLoginDialog($event)">
+					<md-button style="background-color: {{base_hue_darkest.value}};" class="md-fab md-mini" aria-label="Login" ng-click="showLoginDialog($event)">
 						<md-icon style="color: {{base_hue_lightest.value}}">face</md-icon>
 					</md-button>
-					<md-button style="background-color: {{primary_hue_normal.value}};" class="md-fab md-mini" aria-label="More">
+					<md-button style="background-color: {{base_hue_darkest.value}};" class="md-fab md-mini" aria-label="More">
 						<md-icon style="color: {{base_hue_lightest.value}}">menu</md-icon>
 					</md-button>
 				</div>
@@ -27,6 +27,8 @@
 		</md-subheader>
 		<!-- sticky header -->
 
+		<div style="{{base_hue_darkest.value}}; position: fixed; right: 64px; bottom: 48px; height: 56px; width: 200px;" layout-padding>
+		</div>
 		<md-button style="background-color: {{primary_hue_normal.value}}; position: fixed; right: 24px; bottom: 48px;" class="md-fab" aria-label="More">
 			<md-icon style="color: {{base_hue_lightest.value}}">mail</md-icon>
 		</md-button>
