--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -27,9 +27,9 @@
 		</md-subheader>
 		<!-- sticky header -->
 
-		<div style="{{base_hue_darkest.value}}; position: fixed; right: 64px; bottom: 48px; height: 56px; width: 200px;" layout-padding>
+		<div style="background-color: {{base_hue_darkest.value}}; position: fixed; right: 64px; bottom: 48px; height: 56px; width: 200px;">
 		</div>
-		<md-button style="background-color: {{primary_hue_normal.value}}; position: fixed; right: 24px; bottom: 48px;" class="md-fab" aria-label="More">
+		<md-button style="background-color: {{primary_hue_normal.value}}; position: fixed; right: 24px; bottom: 48px; z-index: 2;" class="md-fab" aria-label="More">
 			<md-icon style="color: {{base_hue_lightest.value}}">mail</md-icon>
 		</md-button>
 
