--- a/lib/client/app/application/landing/partials/slideshow.html
+++ b/lib/client/app/application/landing/partials/slideshow.html
@@ -13,8 +13,8 @@
 	        	<div class="left-bar bar" style="position: absolute; top: 0; left:0; height: 80%; width: 4px;"></div>
 	            <div layout="row" layout-margin layout-align="start center">
 	                <div layout="column" layout-align="center start">
-	                    <h1 style="color: {{base_hue_darkest.value}}; font-size: 56px; line-height: 64px; margin: 0;">Cutting Edge Civil Engineering Firm</h1>
-	                    <p style="color: {{base_hue_darkest.value}}; font-size: 16px;">Helping Reshape North Texas!</p>
+	                    <h1 style="color: {{base_hue_darkest.value}}; font-size: 56px; line-height: 64px; margin: 0;">A Bold Civil Engineering Firm</h1>
+	                    <p style="color: {{primary_hue_normal.value}}; font-size: 16px;">Helping Reshape North Texas Into America's Greatest Metropolitan Area!</p>
 	                </div>
 	            </div>
 	            <div class="right-bar bar" style="position: absolute; top: 20%; right: 0; height: 80%; width: 4px;"></div>
