--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -28,7 +28,7 @@
 		<!-- sticky header -->
 
 		<div layout="row" layout-align="center center" style="background-color: {{base_hue_darkest.value}}; position: fixed; right: 108px; bottom: 54px; height: 56px; width: 300px; z-index: 2">
-			<p style="color: {{base_hue_lightest.value}}; font-size: 14px; padding: 8px;">Click Here To Connect With Us!</p><span flex></span>
+			<p style="color: {{base_hue_lightest.value}}; font-size: 14px; padding: 0 0 0 32px;">Click Here To Connect With Us!</p><span flex></span>
 			<md-button class="md-icon-button" aria-label="More">
 				<md-icon style="color: {{base_hue_lightest.value}}">close</md-icon>
 			</md-button>
