--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -27,44 +27,31 @@
 		</md-subheader>
 		<!-- sticky header -->
 
-		<div layout="row" layout-align="center center" style="background-color: {{base_hue_darkest.value}}; position: fixed; right: 108px; bottom: 54px; height: 56px; width: 300px; z-index: 2">
+		<!-- messaging notification -->
+		<div layout="row" ng-init="show_notification = true" ng-hide="show_notification == false" layout-align="center center" style="background-color: {{base_hue_darkest.value}}; position: fixed; right: 108px; bottom: 54px; height: 56px; width: 300px; z-index: 2">
 			<p style="color: {{base_hue_lightest.value}}; font-size: 14px; padding: 0 0 0 16px;">Click Here To Connect With Us!</p><span flex></span>
-			<md-button class="md-icon-button" aria-label="More">
+			<md-button class="md-icon-button" ng-click="show_notification = false" aria-label="More">
 				<md-icon style="color: {{base_hue_lightest.value}}">close</md-icon>
 			</md-button>
 		</div>
 		<md-button style="background-color: {{primary_hue_normal.value}}; position: fixed; right: 24px; bottom: 48px;" class="md-fab" aria-label="More">
 			<md-icon style="color: {{base_hue_lightest.value}}">mail</md-icon>
 		</md-button>
+		<!-- messaging notification -->
 
 		<!-- Slideshow -->
 		<div ng-include style="margin-top: -80px;" src="'application/landing/partials/slideshow.html'"></div>
 		<!-- Slideshow -->
 		
-		<div layout="row" layout-align="center center" class="md-accent normal-container">
-			<div style="height: 80%; max-height: 80%;" layout="row" layout-padding layout="margin" flex>
-				<div show="layout-gt-md" flex="5"></div>
-				<div flex="90" layout="row">
-					<div layout-padding flex="25">
+		<div layout="row" layout-align="center center">
+			<div style="height: {{window_height}}px;" layout="row" flex>
+				<div flex="100" layout="row">
+					<div layout-padding flex="50">
 						<md-card class="md-primary" md-whiteframe="-1" style="background: #fafafa; height: 100%;">
-							<md-card-header>
-								<md-card-header-text>
-									<span class="md-title">Title</span>
-									<span class="md-subhead">Sub header</span>
-								</md-card-header-text>
-							</md-card-header>
-							<div style="max-height: 300px; text-align: center; overflow: hidden;">
-								<img ng-src="media/GettyImages-515225786.jpg" class="md-card-image" alt="image caption">
-							</div>
-							<md-card-footer>
-								<md-card-actions layout="row" layout-align="start center">
-									<md-button>Action 1</md-button>
-									<md-button>Action 2</md-button>
-								</md-card-actions>
-							</md-card-footer>
+							<img ng-src="media/GettyImages-515225786.jpg" class="md-card-image" alt="image caption">
 						</md-card>
 					</div>
-					<div layout-padding flex="25">
+					<div layout-padding flex="50">
 						<md-card class="md-primary" md-whiteframe="-1" style="background: #fafafa; height: 100%;">
 							<md-card-header>
 								<md-card-header-text>
@@ -74,44 +61,6 @@
 							</md-card-header>
 							<div style="max-height: 300px; text-align: center; overflow: hidden;">
 								<img ng-src="media/GettyImages-554392207.jpg" class="md-card-image" alt="image caption">
-							</div>
-							<md-card-footer>
-								<md-card-actions layout="row" layout-align="start center">
-									<md-button>Action 1</md-button>
-									<md-button>Action 2</md-button>
-								</md-card-actions>
-							</md-card-footer>
-						</md-card>
-					</div>
-					<div layout-padding flex="25">
-						<md-card class="md-primary" md-whiteframe="-1" style="background: #fafafa; height: 100%;">
-							<md-card-header>
-								<md-card-header-text>
-									<span class="md-title">Title</span>
-									<span class="md-subhead">Sub header</span>
-								</md-card-header-text>
-							</md-card-header>
-							<div style="max-height: 300px; text-align: center; overflow: hidden;">
-								<img ng-src="media/GettyImages-557219611.jpg" class="md-card-image" alt="image caption">
-							</div>
-							<md-card-footer>
-								<md-card-actions layout="row" layout-align="start center">
-									<md-button>Action 1</md-button>
-									<md-button>Action 2</md-button>
-								</md-card-actions>
-							</md-card-footer>
-						</md-card>
-					</div>
-					<div layout-padding flex="25">
-						<md-card class="md-primary" md-whiteframe="-1" style="background: #fafafa; height: 100%;">
-							<md-card-header>
-								<md-card-header-text>
-									<span class="md-title">Title</span>
-									<span class="md-subhead">Sub header</span>
-								</md-card-header-text>
-							</md-card-header>
-							<div style="max-height: 300px; text-align: center; overflow: hidden;">
-								<img ng-src="media/GettyImages-730266311.jpg" class="md-card-image" alt="image caption">
 							</div>
 							<md-card-footer>
 								<md-card-actions layout="row" layout-align="start center">
