--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -43,12 +43,12 @@
 		<div ng-include style="margin-top: -80px;" src="'application/landing/partials/slideshow.html'"></div>
 		<!-- Slideshow -->
 		
-		<div layout="row" layout-align="center center">
-			<div style="height: {{window_height}}px;" layout="row" flex>
+		<div style="height: {{window_height}}px;" layout="row" layout-align="center center">
+			<div layout="row" flex>
 				<div flex="100" layout="row">
-					<div layout-padding flex="50">
+					<div flex="50">
 						<md-card class="md-primary" md-whiteframe="-1" style="background: #fafafa; height: 100%;">
-							<img ng-src="media/GettyImages-515225786.jpg" class="md-card-image" alt="image caption">
+							<img style="height: {{window_height}}px; width: auto;" ng-src="media/GettyImages-515225786.jpg" class="md-card-image" alt="image caption">
 						</md-card>
 					</div>
 					<div layout-padding flex="50">
