--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -46,10 +46,8 @@
 		<div style="height: {{window_height}}px;" layout="row" layout-align="center center">
 			<div layout="row" flex>
 				<div flex="100" layout="row">
-					<div flex="50">
-						<md-card class="md-primary" md-whiteframe="-1" style="background: #fafafa; margin: 0; height: {{window_height}}px;">
-							<img style="height: 100%; width: auto;" ng-src="media/GettyImages-515225786.jpg" class="md-card-image" alt="image caption">
-						</md-card>
+					<div flex="50" style="background: #fafafa; margin: 0; height: {{window_height}}px; overflow: hidden;">
+						<img style="height: 100%; width: auto;" ng-src="media/GettyImages-515225786.jpg" alt="image caption">
 					</div>
 					<div layout-padding flex="50">
 						<md-card class="md-primary" md-whiteframe="-1" style="background: #fafafa; height: 100%;">
