--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -81,11 +81,7 @@
 			<div class="footer-content-top" layout="row" layout-padding flex>
 				<div layout="column" layout-padding layout-align="start center" flex="33">
 					<div flex>
-						<img src="media/logo-full-white.png" style="max-height: 48px;">
-						<p style="color: {{base_hue_lightest.value}};">9000 Get Started Ln.</p>
-						<p style="color: {{base_hue_lightest.value}};">Dallas, Tx 75024</p>
-						<br>
-						<p style="color: {{base_hue_lightest.value}};">(800) 255-5252</p>
+						<img src="media/logo-full-white.png" style="max-height: 120px;">
 					</div>
 				</div>
 				<div layout="row" flex="66" layout-align="center center">
@@ -141,10 +137,10 @@
 					</div>
 				</div>
 			</div>
-			<md-divider style="width: 100%; border-color: {{base_hue_darker.value}};"></md-divider>
+			<!-- <md-divider style="width: 100%; border-color: {{base_hue_darker.value}};"></md-divider> -->
 			<div class="footer-content-bottom" layout="row" layout-align="center center" layout-padding flex>
 				<div layout-padding layout-align="start center" flex="30">
-					<img src="media/logo-full-white.png" style="max-height: 48px;">
+					<img src="media/logo-box-white.png" style="max-height: 48px;">
 				</div>
 				<div layout-padding flex="70">
 					<div flex layout="row" layout-align="end center">
