--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -15,10 +15,10 @@
 				</div>
 
 				<div flex-gt-sm="33" layout-align="end center" layout="row">
-					<md-button style="background-color: {{primary_hue_normal.value}};" class="md-fab md-mini" aria-label="Login" ng-click="showLoginDialog($event)">
-						<md-icon style="color: {{base_hue_lightest.value}}">face</md-icon>
+					<md-button style="background-color: {{base_hue_darkest.value}};" class="md-fab md-mini" aria-label="Login" ng-click="showLoginDialog($event)">
+						<md-icon style="color: {{base_hue_lightest.value}}">person</md-icon>
 					</md-button>
-					<md-button style="background-color: {{primary_hue_normal.value}};" class="md-fab md-mini" aria-label="More">
+					<md-button style="background-color: {{base_hue_darkest.value}};" class="md-fab md-mini" aria-label="More">
 						<md-icon style="color: {{base_hue_lightest.value}}">menu</md-icon>
 					</md-button>
 				</div>
@@ -139,7 +139,7 @@
 			</div>
 			<!-- <md-divider style="width: 100%; border-color: {{base_hue_darker.value}};"></md-divider> -->
 			<div class="footer-content-bottom" layout="row" layout-align="center center" layout-padding flex>
-				<div layout-padding layout-align="start center" flex="30">
+				<div layout="row" layout-padding layout-align="center center" flex="30">
 					<img src="media/logo-box-white.png" style="max-height: 48px;">
 				</div>
 				<div layout-padding flex="70">
