--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -15,10 +15,10 @@
 				</div>
 
 				<div flex-gt-sm="33" layout-align="end center" layout="row">
-					<md-button style="background-color: {{base_hue_darkest.value}};" class="md-fab md-mini" aria-label="Login" ng-click="showLoginDialog($event)">
+					<md-button class="md-icon-button" aria-label="Login" ng-click="showLoginDialog($event)">
 						<md-icon style="color: {{base_hue_lightest.value}}">person</md-icon>
 					</md-button>
-					<md-button style="background-color: {{base_hue_darkest.value}};" class="md-fab md-mini" aria-label="More">
+					<md-button class="md-icon-button" aria-label="More">
 						<md-icon style="color: {{base_hue_lightest.value}}">menu</md-icon>
 					</md-button>
 				</div>
@@ -79,7 +79,7 @@
 		</div>
 		<div layout="column" layout-align="center center" class="footer-container" flex style="background-color: {{base_hue_darkest.value}}">
 			<div class="footer-content-top" layout="row" layout-padding flex>
-				<div layout="column" layout-padding layout-align="start center" flex="33">
+				<div layout="column" layout-padding layout-align="center center" flex="33">
 					<div flex>
 						<img src="media/logo-full-white.png" style="max-height: 120px;">
 					</div>
@@ -138,7 +138,7 @@
 				</div>
 			</div>
 			<!-- <md-divider style="width: 100%; border-color: {{base_hue_darker.value}};"></md-divider> -->
-			<div class="footer-content-bottom" layout="row" layout-align="center center" layout-padding flex>
+			<div class="footer-content-bottom" layout="row" layout-align="center start" layout-padding flex>
 				<div layout="row" layout-padding layout-align="center center" flex="30">
 					<img src="media/logo-box-white.png" style="max-height: 48px;">
 				</div>
