--- a/lib/client/app/application/landing/partials/slideshow.html
+++ b/lib/client/app/application/landing/partials/slideshow.html
@@ -15,8 +15,8 @@
 	                <div layout="column" layout-align="center start">
 	                    <h1 style="color: {{base_hue_darkest.value}}; font-size: 56px; line-height: 64px; margin: 0;">A Bold Civil Engineering Firm</h1>
 	                    <p style="color: {{base_hue_darkest.value}}; font-size: 16px;">Helping Reshape North Texas Into America's Greatest Metropolitan Area!</p>
-	                    <md-button style="background-color: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}};">
-	                    <md-icon style="color: {{base_hue_lightest.value}}">keyboard_arrow_right</md-icon>Learn More</md-button>
+	                    <md-button class="md-raised" style="background-color: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}};">
+	                    <md-icon style="color: {{base_hue_lightest.value}}">keyboard_arrow_right</md-icon>Learn More&nbsp;</md-button>
 	                </div>
 	            </div>
 	            <div class="right-bar bar" style="position: absolute; top: 20%; right: -4px; height: 80%; width: 4px;"></div>
