--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -138,7 +138,7 @@
 				</div>
 			</div>
 			<!-- <md-divider style="width: 100%; border-color: {{base_hue_darker.value}};"></md-divider> -->
-			<div class="footer-content-bottom" layout="row" layout-align="center start" layout-padding flex>
+			<div class="footer-content-bottom" layout="row" layout-align="start center" layout-padding flex>
 				<div layout="row" layout-padding layout-align="center center" flex="30">
 					<img src="media/logo-box-white.png" style="max-height: 48px;">
 				</div>
