--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -80,7 +80,7 @@
 		<div layout="column" layout-align="center center" class="footer-container" flex style="background-color: {{base_hue_darkest.value}}">
 			<div class="footer-content-top" layout="row" layout-padding flex>
 				<div layout="column" layout-padding layout-align="center center" flex="33">
-					<div flex>
+					<div>
 						<img src="media/logo-full-white.png" style="max-height: 120px;">
 					</div>
 				</div>
