--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -40,7 +40,7 @@
 		<!-- messaging notification -->
 
 		<!-- Slideshow -->
-		<div ng-include style="margin-top: -80px;" src="'application/landing/partials/slideshow.html'"></div>
+		<div ng-include src="'application/landing/partials/slideshow.html'"></div>
 		<!-- Slideshow -->
 		
 		<div style="height: {{window_height}}px;" layout="row" layout-align="center center">
