--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -49,7 +49,7 @@
 
 
 					<div flex="50" style="background: #fafafa; margin: 0; height: {{window_height}}px; overflow: hidden;">
-						<img style="height: 100%; width: auto;" ng-src="media/GettyImages-515225786.jpg" alt="image caption">
+						<img style="height: 100%; width: auto;" ng-src="media/hedgcoxe-medical-office(3).jpg" alt="image caption">
 					</div>
 
 
