--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -45,15 +45,8 @@
 		
 		<div style="height: {{window_height}}px;" layout="row" layout-align="center center">
 			<div layout="row" flex>
-				<div flex="100" layout="row">
-
-
-					<div flex="50" style="background: #fafafa; margin: 0; height: {{window_height}}px; overflow: hidden;">
-						<img style="height: 100%; width: auto;" ng-src="media/state-thomas7.jpg" alt="image caption">
-					</div>
-
-
-					<div layout-padding flex="50">
+				<div flex="100" layout="row" layout-align="center center">
+					<div layout-padding flex="30" ng-repeat="[1,2,3,4,5]">
 						<md-card class="md-primary" md-whiteframe="-1" style="background: #fafafa; height: 100%;">
 							<md-card-header>
 								<md-card-header-text>
@@ -61,13 +54,14 @@
 									<span class="md-subhead">Sub header</span>
 								</md-card-header-text>
 							</md-card-header>
-							<div style="max-height: 300px; text-align: center; overflow: hidden;">
-								<img ng-src="media/GettyImages-554392207.jpg" class="md-card-image" alt="image caption">
-							</div>
+							<md-card-content>
+								<p>MMA's Engineering team utilizes their extensive land development experience to help our clients secure all the entitlements required for a successful development in timely and efficient manner. </p>
+							</md-card-content>
 							<md-card-footer>
 								<md-card-actions layout="row" layout-align="start center">
-									<md-button>Action 1</md-button>
-									<md-button>Action 2</md-button>
+									<md-button class="md-raised" style="background-color: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}};">
+	                    				<md-icon style="color: {{base_hue_lightest.value}}">keyboard_arrow_right</md-icon>Learn More&nbsp;&nbsp;
+	                    			</md-button>
 								</md-card-actions>
 							</md-card-footer>
 						</md-card>
