--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -46,7 +46,7 @@
 		<div style="height: {{window_height}}px;" layout="row" layout-align="center center">
 			<div layout="row" flex>
 				<div flex="100" layout="row" layout-align="center center">
-					<div layout-padding flex="30" ng-repeat="[1,2,3,4,5]">
+					<div layout-padding flex="30" ng-repeat="items in '[1,2,3,4,5]'">
 						<md-card class="md-primary" md-whiteframe="-1" style="background: #fafafa; height: 100%;">
 							<md-card-header>
 								<md-card-header-text>
