--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -44,30 +44,26 @@
 		<!-- Slideshow -->
 		
 		<div style="height: {{window_height}}px;" layout="row" layout-align="center center">
-			<div layout="row" flex>
-				<div flex="100" layout="row" layout-align="center center">
-					<div layout-padding flex="30" ng-repeat="items in [1,2,3,4,5]">
-						<md-card class="md-primary" md-whiteframe="-1" style="background: #fafafa; height: 100%;">
-							<md-card-header>
-								<md-card-header-text>
-									<span class="md-title">Title</span>
-									<span class="md-subhead">Sub header</span>
-								</md-card-header-text>
-							</md-card-header>
-							<md-card-content>
-								<p>MMA's Engineering team utilizes their extensive land development experience to help our clients secure all the entitlements required for a successful development in timely and efficient manner. </p>
-							</md-card-content>
-							<md-card-footer>
-								<md-card-actions layout="row" layout-align="start center">
-									<md-button class="md-raised" style="background-color: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}};">
-	                    				<md-icon style="color: {{base_hue_lightest.value}}">keyboard_arrow_right</md-icon>Learn More&nbsp;&nbsp;
-	                    			</md-button>
-								</md-card-actions>
-							</md-card-footer>
-						</md-card>
-					</div>
-
-
+			<div flex layout="row" layout-align="center center">
+				<div layout-padding ng-repeat="items in [1,2,3,4,5]" flex="30">
+					<md-card class="md-primary" md-whiteframe="-1" style="background: #fafafa; height: 100%;">
+						<md-card-header>
+							<md-card-header-text>
+								<span class="md-title">Title</span>
+								<span class="md-subhead">Sub header</span>
+							</md-card-header-text>
+						</md-card-header>
+						<md-card-content>
+							<p>MMA's Engineering team utilizes their extensive land development experience to help our clients secure all the entitlements required for a successful development in timely and efficient manner. </p>
+						</md-card-content>
+						<md-card-footer>
+							<md-card-actions layout="row" layout-align="start center">
+								<md-button class="md-raised" style="background-color: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}};">
+                    				<md-icon style="color: {{base_hue_lightest.value}}">keyboard_arrow_right</md-icon>Learn More&nbsp;&nbsp;
+                    			</md-button>
+							</md-card-actions>
+						</md-card-footer>
+					</md-card>
 				</div>
 			</div>
 		</div>
