--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -43,7 +43,7 @@
 		<div ng-include src="'application/landing/partials/slideshow.html'"></div>
 		<!-- Slideshow -->
 		
-		<div style="height: {{window_height}}px;" layout="row" layout-align="center center">
+		<div layout="row" layout-align="center center">
 			<div layout-wrap layout="row" layout-align="center center">
 				<div layout-padding ng-repeat="items in [1,2,3,4,5]" flex="30">
 					<md-card class="md-primary" md-whiteframe="-1" style="background: #fafafa; height: 100%;">
