--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -44,7 +44,7 @@
 		<!-- Slideshow -->
 
 		<div layout="row" layout-align="center center">
-			<md-card class="md-whiteframe-4dp" style="background: #fafafa; width: 80%;">
+			<md-card layout="row" layout-align="center center" class="md-whiteframe-4dp" style="background: #fafafa; width: 80%;">
 				<div layout="column" layout-align="center center" style="background-color: {{primary_hue_normal.value}};">
 					<h1 style="color: {{base_hue_lightest.value}}; font-size: 32px; line-height: 64px; margin: 0;">Some Sample Text Here</h1>
 				</div>
